# Project-GenAI

./: .gitignore  README.md
Chatbot/: README.md
Chatbot/notebook/: EDA.ipynb  IntentClassification.ipynb
Chatbot/script/: EmbeddingManager.py  FileProcessor.py  OllamaApi.py  TextProcessor.py  pyproject.toml
Chatbot/server/: README.md
Grocery Store/notebooks/: Instacart_Recommendation_System.ipynb
Grocery_Store/: environment.yml
Grocery_Store/notebooks/: Instacart_Recommendation_System.ipynb
OneShotNlp/: NLP101.ipynb
Recommendation_System/: README.md
Recommendation_System/data/: TestMappedData.csv
Recommendation_System/notebook/: init.ipynb
Recommendation_System/src/: docker-compose.yml
Recommendation_System/src/data/: Indian_Recipe_Test.csv  product.csv
Recommendation_System/src/database/: Dockerfile  init.sql
Recommendation_System/src/notebook/: Product_Mapping.ipynb  indian_recipe_preprocess.ipynb
Recommendation_System/src/notebook/.ipynb_checkpoints/: init-checkpoint.ipynb
Recommendation_System/src/scripts/: addUUID.py  edible_products.csv  productMapping.py  product_embeddings.npy  product_with_ids.csv  recommendation.py  seed.py
Recommendation_System/src/scripts/.ipynb_checkpoints/: productMapping-checkpoint.py
Recommendation_System/src/server/: Dockerfile  express.ts  index.ts  package-lock.json  package.json  tsconfig.json
Recommendation_System/src/server/service/: product.service.ts
Recommendation_System/src/ui/: Dockerfile  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
(+29 files in other folders)
