[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["Mir Sahib"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.9.1"
scipy = "^1.15.2"
sentence-transformers = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
